# rotation_master

desktop/: CMakeLists.txt  main.cpp  ui.cpp
desktop/gl_helper/: CMakeLists.txt  shape.cpp
web/: CMakeLists.txt  main.cpp  ui.cpp
web/gl_helper/: CMakeLists.txt  shader.cpp  shape.cpp
